--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <center><h1>My Portfolio</h1></center>
         <div class="information">
             <div class="img">
-                <img src="img.jpg" alt="Italian Trulli">
+                <img src="Loydie.jpg" alt="Italian Trulli">
             </div>
             <div class="user_info">
-                <h1>Jhon Christian Ubaldo</h1>
-                <h2>Age: 23</h2>
-                <h2>Birthday:Nov 23, 1998 </h2>
+                <h1>John Loyd B. Sablad</h1>
+                <h2>Age: 22</h2>
+                <h2>Birthday:Aug 1, 1999 </h2>
                 <h2>Gender: Male</h2>
                 <h2>Contact Number:09356162084</h2>
                 <h2>Address:    Cabalawan</h2>
